EFS & apache conf

--- a/nugu-server/home.conf
+++ b/nugu-server/home.conf
@@ -1,6 +1,41 @@
 WSGIPythonPath /nugu-api:/usr/local/lib/python3.4/site-packages
 
 <VirtualHost *:80>
+    ServerName sparcs.org
+    ServerAlias www.sparcs.org sparcs.kaist.ac.kr
+    Redirect permanent / https://sparcs.org/
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName nugu.sparcs.org
+    Redirect permanent / https://nugu.sparcs.org/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName www.sparcs.org
+    ServerAlias sparcs.kaist.ac.kr
+    Redirect permanent / https://sparcs.org/
+
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/sparcs.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/sparcs.org/privkey.pem
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin wheel@sparcs.org
+    ServerName sparcs.org
+
+    ProxyPreserveHost On
+    ProxyRequests Off
+    ProxyPass / http://home-server:15693/
+    ProxyPassReverse / http://home-server:15693/
+
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/sparcs.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/sparcs.org/privkey.pem
+</VirtualHost>
+
+<VirtualHost *:443>
     ServerAdmin wheel@sparcs.org
     ServerName nugu.sparcs.org
 
@@ -13,6 +48,7 @@ WSGIPythonPath /nugu-api:/usr/local/lib/python3.4/site-packages
     </Files>
     </Directory>
 
-    ErrorLog /var/log/apache2/nugu-api-ssl-error.log
-    CustomLog /var/log/apache2/nugu-api-ssl-access.log common
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/sparcs.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/sparcs.org/privkey.pem
 </VirtualHost>
