--- a/home-server/Dockerfile
+++ b/home-server/Dockerfile
@@ -13,7 +13,14 @@ RUN apt-get install -y \
     locales \
     wget \
 	git \
-    mongodb-clients
+    mongodb-clients \
+    stunnel4 \
+    nfs-common \
+    binutils
+RUN git clone https://github.com/aws/efs-utils
+WORKDIR /efs-utils
+RUN ./build-deb.sh
+RUN dpkg -i ./build/amazon-efs-utils*deb
 
 # Creating users
 RUN adduser --gecos "" --disabled-password sysop
