--- a/home-server/Dockerfile
+++ b/home-server/Dockerfile
@@ -17,10 +17,13 @@ RUN apt-get install -y \
     stunnel4 \
     nfs-common \
     binutils
+
+# EFS-Utils installation
 RUN git clone https://github.com/aws/efs-utils
 WORKDIR /efs-utils
 RUN ./build-deb.sh
 RUN dpkg -i ./build/amazon-efs-utils*deb
+WORKDIR /
 
 # Creating users
 RUN adduser --gecos "" --disabled-password sysop
