--- a/home-server/Dockerfile
+++ b/home-server/Dockerfile
@@ -2,6 +2,13 @@
 FROM node:13-alpine AS build
 MAINTAINER SPARCS WHEEL <wheel@sparcs.org>
 
+# Install needed applications
+RUN apk add --no-cache \
+    git \
+    g++ \
+    make \
+    python
+
 # Clone repository
 WORKDIR /usr/src/app
 RUN git clone https://github.com/sparcs-kaist/sparcs.org-v2.git .
@@ -10,12 +17,16 @@ RUN git clone https://github.com/sparcs-kaist/sparcs.org-v2.git .
 RUN npm install
 RUN npm run build
 
+# Delete extraneous devDependencies
+RUN npm prune --production
+
 # Move needed files to output directory
 RUN mkdir output && \
     mv assets output && \
     mv src output && \
     mv dist output && \
-    mv package*.json output
+    mv package*.json output && \
+    mv node_modules output
 
 # --------- RELEASE STAGE ---------
 FROM node:13-alpine AS release
@@ -26,7 +37,7 @@ WORKDIR /usr/src/app
 # Copy build result and needed files
 COPY --from=build /usr/src/app/output .
 
-# Install only production dependencies
-RUN npm install --only=production
+# Run container
+ENV NODE_ENV production
 EXPOSE 3000
 CMD ["npm", "start"]
