Enabled smallfiles for docker as server's storage is running out

--- a/home-db/mongodb.conf
+++ b/home-db/mongodb.conf
@@ -14,6 +14,7 @@ port = 27017
 
 # Enable journaling, http://www.mongodb.org/display/DOCS/Journaling
 journal=true
+smallfiles=true
 
 # Enables periodic logging of CPU utilization and I/O wait
 #cpu = true
